remove twitter from about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -52,7 +52,7 @@ excerpt: Software Carpentry teaches researchers foundational computing skills
       You can <a href="mailto:team@carpentries.org">send us email</a>,
       <a href="https://carpentries.org/newsletter/">sign up for our newsletter</a>,
       <a href="https://carpentries.org/blog/">read our blog</a>,
-      follow <a href="https://twitter.com/swcarpentry">Software Carpentry</a> and <a href="https://twitter.com/thecarpentries">The Carpentries</a> on Twitter,
+      follow <a href="https://hachyderm.io/@thecarpentries">The Carpentries</a> on Mastodon,
       or browse and raise issues against <a href="https://github.com/swcarpentry">our repositories on GitHub</a>.
     </p>
   </div>
