--- a/pages/workshops_past.html
+++ b/pages/workshops_past.html
@@ -8,7 +8,7 @@ excerpt: listing of all our past workshops
 <div class="row">
   <div class="medium-12 columns">
 
-<b><a href="#">Check out our upcoming workshops here</a>.</b><hr>
+<b><a href="/workshops/upcoming/">Check out our upcoming workshops here</a>.</b><hr>
 {% assign workshop_list = site.data.swc_past_workshops %}
 {% include workshop_table.md %}
 </div>
