--- a/pages/workshops_upcoming.html
+++ b/pages/workshops_upcoming.html
@@ -8,7 +8,7 @@ excerpt: listing of all our past workshops
 <div class="row">
   <div class="medium-12 columns">
 
-<b><a href="#">Check out our past workshops here</a>.</b><hr>
+<b><a href="/workshops/past/">Check out our past workshops here</a>.</b><hr>
 {% assign workshop_list = site.data.swc_upcoming_workshops %}
 {% include workshop_table.md %}
 </div>
